<resources>
    <string name="app_name">LOGIN</string>
    <string name="user">User</string>
    <string name="pass">Pass</string>
    <string name="account1">ACCOUNT</string>
    <string name="id">ID</string>
    <string name="admin">Admin</string>
    <string name="login">登 录</string>
    <string name="loginFail">登录失败！</string>
    <string name="loginSuccess">登录成功！</string>
    <string name="username">用户名:</string>
    <string name="acconut">账&#8195;号:</string>
    <string name="password">密&#8195;码:</string>
    <string name="register">注 册</string>
    <string name="welcome">欢迎! %s</string>
    <string name="toLogin">去登陆</string>
    <string name="toHome">返 回</string>
    <string name="quit">退出登录</string>
    <string name="logout">注销用户</string>
    <string name="change">修改密码</string>
    <string name="userList">用户列表</string>
    <string name="idtip">删除ID:</string>
    <string name="delete">删除</string>
    <string name="deleteall">删除全部</string>
    <string name="edit">编辑</string>
    <string name="out">退出</string>
    <string name="user_tips">请输入用户名</string>
    <string name="account_tips">请输入账号</string>
    <string name="pass_tips">请输入密码</string>
    <string name="pass2_tips">请再次输入密码</string>
    <string name="old_pass_tips">请输入旧密码</string>
    <string name="new_pass_tips">请输入新密码</string>
    <string name="new_pass2_tips">请再次输入新密码</string>
    <string name="dialog_tips">提示</string>
    <string name="dialog_login_tips">登录成功!确定跳转到管理员界面?</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>