<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <import type="com.example.myaccount.constant.Constant" />

        <variable
            name="adminvm"
            type="com.example.myaccount.viewmodel.AdminViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:src="@drawable/left"/>
            <TextView
                android:id="@+id/listTitle"
                android:layout_width="@dimen/dimen_300"
                android:layout_height="wrap_content"
                android:text="@string/userList"
                android:textSize="@dimen/textSize30"
                android:background="@color/white"
                android:gravity="center" />
            <ToggleButton
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/out"
                android:textOff="@string/edit"
                android:checked="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="@{adminvm.mDeleteEnableStatus ? View.VISIBLE : View.GONE}">
            <TextView
                android:layout_width="@dimen/dimen_100"
                android:layout_height="wrap_content"
                android:text="@string/idtip"
                android:gravity="center"
                android:textSize="@dimen/textSize24" />
            <EditText
                android:id="@+id/mId"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize30"
                android:background="@color/white" />
            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:enabled="@{adminvm.mDeleteBtEnableStatus}"/>
            <Button
                android:id="@+id/deleteall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteall"
                android:enabled="@{adminvm.mDeleteAllBbtEnableStatus}"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_marginTop5"
            android:layout_marginLeft="@dimen/layout_marginLeft5">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</layout>